--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>The Rekt Runner</title>
-<meta name="fc:miniapp" content='{"version": "1", "imageUrl": "https://thererktrunner.xyz/assets/embed-3x2.png", "button": {"title": "Run", "action": {"type": "launch_frame", "url": "https://thererktrunner.xyz/"}}, "splashImageUrl": "https://thererktrunner.xyz/assets/splash.png", "splashBackgroundColor": "#020617", "name": "TheRektRunner"}' />
+<title>The Rekt Runner</title><meta name="base:app_id" content="6942bb34d19763ca26ddc39f" />
+<meta name="fc:miniapp" content='{"version": "1", "imageUrl": "https://rekt-runner.vercel.app/assets/embed-3x2.png", "button": {"title": "Run", "action": {"type": "launch_frame", "url": "https://rekt-runner.vercel.app/"}}, "splashImageUrl": "https://rekt-runner.vercel.app/assets/splash.png", "splashBackgroundColor": "#020617", "name": "TheRektRunner"}' />
 <meta name="fc:frame" content="vNext" />
 <meta property="og:title" content="The Rekt Runner"/>
 <meta property="og:description" content="Run the volatility."/>
-<meta property="og:image" content="https://thererktrunner.xyz/assets/hero.png"/>
+<meta property="og:image" content="https://rekt-runner.vercel.app/assets/hero.png"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
