--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>The Rekt Runner</title>
+  <title>The Rekt Runner</title><meta name="base:app_id" content="6942be28d19763ca26ddc3a0" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 
-  <meta name="fc:miniapp" content="{&quot;version&quot;:&quot;1&quot;,&quot;imageUrl&quot;:&quot;https://thererkt-runner.xyz/assets/embed-3x2.png&quot;,&quot;button&quot;:{&quot;title&quot;:&quot;Run&quot;,&quot;action&quot;:{&quot;type&quot;:&quot;launch_frame&quot;,&quot;url&quot;:&quot;https://thererkt-runner.xyz/&quot;}},&quot;splashImageUrl&quot;:&quot;https://thererkt-runner.xyz/assets/splash.png&quot;,&quot;splashBackgroundColor&quot;:&quot;#020617&quot;,&quot;name&quot;:&quot;TheRektRunner&quot;}" />
+  <meta name="fc:miniapp" content="{&quot;version&quot;:&quot;1&quot;,&quot;imageUrl&quot;:&quot;https://rektrunner.vercel.app/assets/embed-3x2.png&quot;,&quot;button&quot;:{&quot;title&quot;:&quot;Run&quot;,&quot;action&quot;:{&quot;type&quot;:&quot;launch_frame&quot;,&quot;url&quot;:&quot;https://rektrunner.vercel.app/&quot;}},&quot;splashImageUrl&quot;:&quot;https://rektrunner.vercel.app/assets/splash.png&quot;,&quot;splashBackgroundColor&quot;:&quot;#020617&quot;,&quot;name&quot;:&quot;TheRektRunner&quot;}" />
   <meta name="fc:frame" content="vNext" />
 
   <meta property="og:title" content="The Rekt Runner" />
   <meta property="og:description" content="An infinite runner inside a trading chart. Volatility becomes terrain—jump dumps, dodge bear traps, ride green candles." />
-  <meta property="og:image" content="https://thererkt-runner.xyz/assets/hero.png" />
+  <meta property="og:image" content="https://rektrunner.vercel.app/assets/hero.png" />
 
   <style>
     :root {
